docs/1.2rc1/_sources/api/gammapy.modeling.models.LogParabolaSpectralModel.rst.txt
LogParabolaSpectralModel
========================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: LogParabolaSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~LogParabolaSpectralModel.alpha
      ~LogParabolaSpectralModel.amplitude
      ~LogParabolaSpectralModel.beta
      ~LogParabolaSpectralModel.covariance
      ~LogParabolaSpectralModel.default_parameters
      ~LogParabolaSpectralModel.e_peak
      ~LogParabolaSpectralModel.frozen
      ~LogParabolaSpectralModel.is_norm_spectral_model
      ~LogParabolaSpectralModel.parameters
      ~LogParabolaSpectralModel.pivot_energy
      ~LogParabolaSpectralModel.reference
      ~LogParabolaSpectralModel.tag
      ~LogParabolaSpectralModel.type

   .. rubric:: Methods Summary

   .. autosummary::

      ~LogParabolaSpectralModel.__call__
      ~LogParabolaSpectralModel.copy
      ~LogParabolaSpectralModel.energy_flux
      ~LogParabolaSpectralModel.energy_flux_error
      ~LogParabolaSpectralModel.evaluate
      ~LogParabolaSpectralModel.evaluate_error
      ~LogParabolaSpectralModel.freeze
      ~LogParabolaSpectralModel.from_dict
      ~LogParabolaSpectralModel.from_log10
      ~LogParabolaSpectralModel.from_parameters
      ~LogParabolaSpectralModel.integral
      ~LogParabolaSpectralModel.integral_error
      ~LogParabolaSpectralModel.inverse
      ~LogParabolaSpectralModel.inverse_all
      ~LogParabolaSpectralModel.plot
      ~LogParabolaSpectralModel.plot_error
      ~LogParabolaSpectralModel.reassign
      ~LogParabolaSpectralModel.reference_fluxes
      ~LogParabolaSpectralModel.spectral_index
      ~LogParabolaSpectralModel.spectral_index_error
      ~LogParabolaSpectralModel.to_dict
      ~LogParabolaSpectralModel.unfreeze

   .. rubric:: Attributes Documentation

   .. autoattribute:: alpha
   .. autoattribute:: amplitude
   .. autoattribute:: beta
   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: e_peak
   .. autoattribute:: frozen
   .. autoattribute:: is_norm_spectral_model
   .. autoattribute:: parameters
   .. autoattribute:: pivot_energy
   .. autoattribute:: reference
   .. autoattribute:: tag
   .. autoattribute:: type

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: freeze
   .. automethod:: from_dict
   .. automethod:: from_log10
   .. automethod:: from_parameters
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: inverse_all
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: reassign
   .. automethod:: reference_fluxes
   .. automethod:: spectral_index
   .. automethod:: spectral_index_error
   .. automethod:: to_dict
   .. automethod:: unfreeze
